--- a/snippets/prometheus.yml.tmpl
+++ b/snippets/prometheus.yml.tmpl
@@ -133,6 +133,10 @@ scrape_configs:
   - source_labels: [__meta_kubernetes_service_name]
     action: replace
     target_label: kubernetes_name
+  - source_labels: [__meta_kubernetes_pod_node_name, __meta_kubernetes_endpoints_name]
+    action: replace
+    target_label: node
+    regex: (.*);node-exporter
 
   metric_relabel_configs:
 
